--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -1,1 +1,11 @@
 $font-size: 12px;
+$color-text: #333;
+
+// 颜色
+$color-green: #67C23A;
+$color-blue: #409EFF;
+$color-red: #F56C6C;
+$color-gray: #909399;
+
+//距离
+$margin-right: 10px; 
