--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,7 @@
 
 @import "~@/styles/iconfont.scss";
+@import "~@/styles/const.scss";
 
 @import "~@/styles/components/label.scss";
+@import "~@/styles/components/input.scss";
+@import "~@/styles/components/button.scss";
