--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,4 @@
 @import "~@/styles/components/label.scss";
 @import "~@/styles/components/input.scss";
 @import "~@/styles/components/button.scss";
+@import "~@/styles/components/radio.scss";
