--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,4 @@
 @import "~@/styles/components/input.scss";
 @import "~@/styles/components/button.scss";
 @import "~@/styles/components/radio.scss";
+@import "~@/styles/components/checkbox.scss";
