--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -8,7 +8,7 @@
   width: $input-width;
   line-height: $input-line-height;
   height: $input-line-height;
-  vertical-align: top;
+  vertical-align: middle;
   color: $input-color;
   outline: none;
   border: 1px solid $input-border-color;
