--- a/src/styles/components/label.scss
+++ b/src/styles/components/label.scss
@@ -8,7 +8,7 @@
   font-size: $label-font-size;
   width: auto;
   line-height: $label-line-height;
-  vertical-align: top;
+  vertical-align: middle;
   color: $label-color;
   &.align-left {
     text-align: left;
