--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import "~@/styles/components/button.scss";
 @import "~@/styles/components/radio.scss";
 @import "~@/styles/components/checkbox.scss";
+@import "~@/styles/components/select.scss";
