--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -82,7 +82,7 @@ $select-active-color: $color-blue;
 $select-disabled-color: $color-gray + #333333;
 $select-tag-line-height: $line-height - 10px;
 $select-tag-background: $color-gray + #555555;
-
+$select-border-color: $border-color;
 $option-line-height: 25px;
 $option-padding-right: $margin-right;
 $option-font-size: $font-size;
