--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -67,12 +67,12 @@
       text-align: center;
       color: $select-default-color;
       transition: all 0.3s;
-      pointer-events: none;
       .el-input__suffix-inner {
         text-align: center;
         width: 100%;
         height: 100%;
         display: block;
+        cursor: pointer;
         .el-select__caret {
           width: 100%;
           height: 100%;
@@ -80,15 +80,21 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          &::before {
+          &.el-icon-arrow-up::before {
             content: "\e666";
+          }
+          &.el-icon-circle-close::before {
+            content: "\e65c";
+            color: $select-active-color;
+          }
+          &::before {
             font-size: $select-font-size;
             line-height: $select-line-height;
             display: block;
             transition: all $select-animate-time;
-            font-family:"iconfont" !important;
-            font-size:14px;
-            font-style:normal;
+            font-family: "iconfont" !important;
+            font-size: 14px;
+            font-style: normal;
             -webkit-font-smoothing: antialiased;
             -webkit-text-stroke-width: 0.2px;
             -moz-osx-font-smoothing: grayscale;
