--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -88,3 +88,17 @@ $option-padding-right: $margin-right;
 $option-font-size: $font-size;
 $option-default-color: $color-gray;
 $option-active-color: $color-blue;
+
+// switch
+$switch-margin-right: $margin-right;
+$switch-line-height: $line-height;
+$switch-min-width: 60px;
+$switch-font-size: $font-size;
+$switch-animate-time: 0.3s;
+$switch-border-width: 5px;
+$switch-background-color: $color-gray;
+$switch-default-color: $color-blue;
+$switch-success-color: $color-green;
+$switch-error-color: $color-red;
+$switch-warning-color: $color-yellow;
+
