--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import "~@/styles/components/radio.scss";
 @import "~@/styles/components/checkbox.scss";
 @import "~@/styles/components/select.scss";
+@import "~@/styles/components/switch.scss";
