--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -102,3 +102,16 @@ $switch-success-color: $color-green;
 $switch-error-color: $color-red;
 $switch-warning-color: $color-yellow;
 
+// rate
+$rate-margin-right: $margin-right;
+$rate-line-height: $line-height;
+$rate-min-width: 60px;
+$rate-font-size: $font-size;
+$rate-animate-time: 0.3s;
+$rate-icon-height: 20px;
+$rate-icon-color: $color-gray + #444444;
+$rate-default-color: $color-blue;
+$rate-success-color: $color-green;
+$rate-error-color: $color-red;
+$rate-warning-color: $color-yellow;
+
