--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @import "~@/styles/components/checkbox.scss";
 @import "~@/styles/components/select.scss";
 @import "~@/styles/components/switch.scss";
+@import "~@/styles/components/rate.scss";
