--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -115,3 +115,18 @@ $rate-success-color: $color-green;
 $rate-error-color: $color-red;
 $rate-warning-color: $color-yellow;
 
+// datePicker
+$datePicker-margin-right: $margin-right;
+$datePicker-line-height: $line-height;
+$datePicker-min-width: 60px;
+$datePicker-width: 300px;
+$datePicker-font-size: $font-size;
+$datePicker-animate-time: 0.3s;
+$datePicker-icon-height: 20px;
+$datePicker-icon-color: $color-gray + #444444;
+$datePicker-color: $color-gray - #222222;
+$datePicker-default-color: $color-blue;
+$datePicker-success-color: $color-green;
+$datePicker-error-color: $color-red;
+$datePicker-warning-color: $color-yellow;
+
