--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,4 @@
 @import "~@/styles/components/select.scss";
 @import "~@/styles/components/switch.scss";
 @import "~@/styles/components/rate.scss";
+@import "~@/styles/components/datePicker.scss";
