--- a/src/styles/components/datePicker.scss
+++ b/src/styles/components/datePicker.scss
@@ -3,7 +3,9 @@
 .xin-date-picker {
   display: inline-block;
   vertical-align: middle;
-  .el-input__inner {
+  position: relative;
+  width: $input-width;
+  .el-input__inner, .el-range-input {
     display: inline-block;
     margin-right: $input-margin-right;
     font-size: $input-font-size;
@@ -15,9 +17,12 @@
     outline: none;
     border: 1px solid $input-border-color;
     box-sizing: border-box;
-    padding: 0 $input-padding-right;
+    padding: 0 $input-padding-right * 2;
     transition: all 0.3s;
     background: transparentize($input-border-color, 0.9);
+    &:hover {
+      border: 1px solid $input-border-active-color;
+    }
     &::placeholder {
       color: $input-disabled-color + #222222;
     }
@@ -28,7 +33,59 @@
     }
   }
   .el-input__prefix {
-    
+    left: 10px;
+  }
+  .el-input__suffix {
+    right: 10px;
+  }
+  .el-input__prefix, .el-input__suffix {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    z-index: 1;
+    text-align: center;
+    color: $select-default-color;
+    transition: all 0.3s;
+    .el-input__suffix-inner {
+      text-align: center;
+      width: 100%;
+      height: 100%;
+      display: block;
+      cursor: pointer;
+    }
+    .el-input__icon {
+      width: 25px;
+      line-height: 40px;
+      height: 100%;
+      text-align: center;
+      transition: all .3s;
+      &.el-icon-date::before {
+        content: "\e69f";
+      }
+      &.el-icon-circle-close::before {
+        content: "\e67a";
+        color: $datePicker-default-color;
+      }
+      &::before {
+        font-size: $datePicker-font-size;
+        line-height: $datePicker-line-height;
+        display: block;
+        transition: all $datePicker-animate-time;
+        font-family: "iconfont" !important;
+        font-size: 14px;
+        font-style: normal;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-stroke-width: 0.2px;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      &::after {
+        content: "";
+        height: 100%;
+        width: 0;
+        display: inline-block;
+        vertical-align: middle;
+      }
+    }
   }
 }
 .el-picker-panel {
