--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -130,3 +130,11 @@ $datePicker-success-color: $color-green;
 $datePicker-error-color: $color-red;
 $datePicker-warning-color: $color-yellow;
 
+// table
+$table-font-size: $font-size;
+$table-line-height: $line-height;
+$table-default-color: $color-gray;
+$table-active-color: $color-blue;
+$table-success-color: $color-green;
+$table-error-color: $color-red;
+$table-warning-color: $color-yellow;
