--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,4 @@
 @import "~@/styles/components/switch.scss";
 @import "~@/styles/components/rate.scss";
 @import "~@/styles/components/datePicker.scss";
+@import "~@/styles/components/table.scss";
