--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -139,3 +139,11 @@ $table-active-color: $color-blue;
 $table-success-color: $color-green;
 $table-error-color: $color-red;
 $table-warning-color: $color-yellow;
+
+// page
+$page-font-size: $font-size;
+$page-line-height: $line-height;
+$page-margin-right: $margin-right;
+$page-font-color: $color-gray;
+$page-background-color: $color-gray + #555555;
+
