--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,3 +12,4 @@
 @import "~@/styles/components/rate.scss";
 @import "~@/styles/components/datePicker.scss";
 @import "~@/styles/components/table.scss";
+@import "~@/styles/components/page.scss";
