--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -93,7 +93,7 @@
             line-height: $select-line-height;
             display: block;
             transition: all $select-animate-time;
-            font-family: "iconfont" !important;
+            font-family: "xin-iconfont" !important;
             font-size: 14px;
             font-style: normal;
             -webkit-font-smoothing: antialiased;
@@ -147,7 +147,7 @@
           line-height: $select-tag-line-height;
           display: block;
           transition: all $select-animate-time;
-          font-family:"iconfont" !important;
+          font-family:"xin-iconfont" !important;
           font-size:14px;
           font-style:normal;
           border-radius: 100%;
