--- a/src/styles/iconfont.scss
+++ b/src/styles/iconfont.scss
@@ -1,17 +1,18 @@
 
 @font-face {
-  font-family: 'iconfont';  /* project id 1855680 */
-  src: url('//at.alicdn.com/t/font_1855680_rtonz4wj4u.eot');
-  src: url('//at.alicdn.com/t/font_1855680_rtonz4wj4u.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1855680_rtonz4wj4u.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1855680_rtonz4wj4u.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1855680_rtonz4wj4u.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1855680_rtonz4wj4u.svg#iconfont') format('svg');
+  font-family: 'xin-iconfont';  /* project id 1855680 */
+  src: url('//at.alicdn.com/t/font_1855680_psfkibdkpo.eot');
+  src: url('//at.alicdn.com/t/font_1855680_psfkibdkpo.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1855680_psfkibdkpo.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1855680_psfkibdkpo.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1855680_psfkibdkpo.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1855680_psfkibdkpo.svg#xin-iconfont') format('svg');
 }
 
-.iconfont{
-  font-family:"iconfont" !important;
-  font-size:16px;font-style:normal;
+.xin-iconfont {
+  font-family: "xin-iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
