--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,3 +13,4 @@
 @import "~@/styles/components/datePicker.scss";
 @import "~@/styles/components/table.scss";
 @import "~@/styles/components/page.scss";
+@import "~@/styles/components/tabs.scss";
