--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -151,3 +151,11 @@ $page-font-color: $color-gray;
 $page-background-color: $color-gray + #666666;
 $page-active-color: $color-blue;
 
+// tabs
+$tabs-font-size: $font-size;
+$tabs-animate-time: 0.3s;
+$tabs-item-height: $line-height + 5px;
+$tabs-width: 100px;
+$tabs-default-color: $color-gray;
+$tabs-border-color: $color-gray + #444444;
+$tabs-active-color: $color-blue;
