--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -53,6 +53,7 @@ $button-border-info-color: $color-gray;
 // radio
 $radio-margin-right: $margin-right;
 $radio-font-size: $font-size;
+$radio-animate-time: 0.1s;
 $radio-icon-width: 15px;
 $radio-icon-margin-right: 5px;
 $radio-line-height: $line-height;
@@ -62,7 +63,7 @@ $radio-disabled-color: $color-gray;
 
 // checkbox
 $checkbox-font-size: $font-size;
-$checkbox-animate-time: 0.2s;
+$checkbox-animate-time: 0.1s;
 $checkbox-icon-width: 15px;
 $checkbox-icon-margin-right: 5px;
 $checkbox-line-height: $line-height;
@@ -157,5 +158,7 @@ $tabs-animate-time: 0.3s;
 $tabs-item-height: $line-height + 5px;
 $tabs-width: 100px;
 $tabs-default-color: $color-gray;
-$tabs-border-color: $color-gray + #444444;
 $tabs-active-color: $color-blue;
+$tabs-success-color: $color-green;
+$tabs-warning-color: $color-yellow;
+$tabs-error-color: $color-red;
