--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -2,14 +2,16 @@
 @import "~@/styles/const.scss";
 .xin-tabs {
   width: 100%;
-  border: 1px solid $tabs-border-color;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparentize($tabs-default-color, 0.6);
   transition: all $tabs-animate-time;
   &:hover {
     box-shadow: 0 0 8px transparentize($tabs-default-color, 0.6);
   }
   .xin-tabs-header {
     background: transparentize($tabs-default-color, 0.9);
-    border-bottom: 1px solid $tabs-border-color;
+    border-bottom: 1px solid transparentize($tabs-default-color, 0.6);
     height: $tabs-item-height;
     box-sizing: border-box;
     .xin-tabs-header-item {
@@ -21,10 +23,11 @@
       height: $tabs-item-height;
       box-sizing: border-box;
       margin-left: -1px;
+      cursor: pointer;
       &.active {
         background: #fff;
-        border-left: 1px solid $tabs-border-color;
-        border-right: 1px solid $tabs-border-color;
+        border-left: 1px solid transparentize($tabs-default-color, 0.6);
+        border-right: 1px solid transparentize($tabs-default-color, 0.6);
         border-bottom: 1px solid #fff;
       }
     }
@@ -34,6 +37,24 @@
     &.scroll {
       overflow-y: auto;
     }
+  }
+  &.blue {
+    border-color: transparentize($tabs-active-color, 0);
+    &:hover {
+      box-shadow: 0 0 8px transparentize($tabs-active-color, 0.6);
+    }
+    .xin-tabs-header {
+      background: transparentize($tabs-active-color, 0);
+      .xin-tabs-header-item {
+        color: #fff;
+        &.active {
+          color: $tabs-active-color;
+          border-left: 1px solid transparentize($tabs-active-color, 0);
+          border-right: 1px solid transparentize($tabs-active-color, 0);
+        }
+      }
+    }
+
   }
 }
 
