--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,4 @@
 @import "~@/styles/components/table.scss";
 @import "~@/styles/components/page.scss";
 @import "~@/styles/components/tabs.scss";
+@import "~@/styles/components/dialog.scss";
